`skip-gram_word2vec` project, update `dropout_threshold` to 0.4

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -241,21 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5233, 3080, 11, 5, 194, 1, 3133, 45, 58, 155, 127, 741, 476, 10571, 133, 0, 27349, 1, 0, 102, 854, 2, 0, 15067, 58112, 1, 0, 150, 854, 3580, 0, 194, 10, 190, 58, 4, 5, 10712, 214, 6, 1324, 104, 454, 19, 58, 2731, 362, 6, 3672, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Your code here\n",
     "import numpy as np\n",
@@ -266,8 +258,8 @@
     "\n",
     "def subsample(word_frequency_threshold=1e-5, dropout_threshold=0.5):\n",
     "    subsampled_int_words = []\n",
-    "    for word in int_words:\n",
-    "        freq = word_frequency[int_to_vocab[word]] / total_word_count\n",
+    "    for int_word in int_words:\n",
+    "        freq = word_frequency[int_to_vocab[int_word]] / total_word_count\n",
     "        subsample_probability = (np.sqrt(word_frequency_threshold / freq))\n",
     "        \n",
     "        if subsample_probability > dropout_threshold:\n",
@@ -276,8 +268,10 @@
     "    return subsampled_int_words\n",
     "    \n",
     "\n",
-    "train_words = subsample(word_frequency_threshold=1e-5, dropout_threshold=1e-5) # The final subsampled word list\n",
-    "print(train_words[:50])\n"
+    "train_words = subsample(word_frequency_threshold=1e-5, dropout_threshold=0.4) # The final subsampled word list\n",
+    "print(train_words[:50])\n",
+    "print(\"We originally had : \", total_word_count)\n",
+    "print(\"Now we have: \", len(train_words))"
    ]
   },
   {
@@ -320,6 +314,7 @@
     "    ''' Get a list of words in a window around an index. '''\n",
     "    \n",
     "    # Your code here\n",
+    "    \n",
     "    \n",
     "    return"
    ]
