--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -194,13 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
@@ -208,7 +216,18 @@
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return {\n",
+    "        '.': '||Period||',\n",
+    "        ',': '||Comma||',\n",
+    "        '\"': '||Quotation_Mark||',\n",
+    "        ';': '||Semicolon||',\n",
+    "        '!': '||Exclamation_Mark||',\n",
+    "        '?': '||Question_Mark',\n",
+    "        '(': '||Left_Parentheses||',\n",
+    "        ')': '||Right_Parentheses||',\n",
+    "        '--': '||Dash||',\n",
+    "        '\\n': '||Return||'\n",
+    "    }\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
