--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -121,17 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24, 30, 20, 31, 8, 4, 27, 15, 32, 25, 33, 20, 22, 23, 19, 7, 1]\n",
-      "[5, 16, 20, 11, 18, 23, 29, 32, 25, 33, 28, 26, 23, 13, 7, 1]\n",
-      "[21, 20, 11, 8, 23, 10, 32, 25, 33, 20, 11, 14, 23, 6, 7, 1]\n",
-      "[5, 16, 20, 31, 12, 23, 6, 32, 25, 33, 9, 18, 23, 17, 7, 1]\n",
       "Tests Passed\n"
      ]
     }
@@ -153,10 +149,12 @@
     "    target_id_text = []\n",
     "\n",
     "    for s in sentences:\n",
-    "        source_id_text.append([source_vocab_to_int[w] for w in s.split(' ')])\n",
+    "        # filter out any empty strings from word list as this causes issues\n",
+    "        source = [source_vocab_to_int[w] for w in s.split(' ') if w]\n",
+    "        source_id_text.append(source)\n",
     "    \n",
     "    for ts in target_sentences:\n",
-    "        target = [target_vocab_to_int[w] for w in ts.split(' ')]\n",
+    "        target = [target_vocab_to_int[w] for w in ts.split(' ') if w]\n",
     "        target.append(target_vocab_to_int['<EOS>'])\n",
     "        target_id_text.append(target)\n",
     "        \n",
@@ -178,10 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
