--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -711,11 +711,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size,\n",
     "                  source_sequence_length, target_sequence_length,\n",
@@ -740,8 +746,34 @@
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    \n",
+    "    # Pass the input data through the encoder. We'll ignore the encoder output, but use the state\n",
+    "    _, enc_state = encoding_layer(input_data, \n",
+    "                                  rnn_size, \n",
+    "                                  num_layers,\n",
+    "                                  keep_prob,\n",
+    "                                  source_sequence_length,\n",
+    "                                  source_vocab_size, \n",
+    "                                  enc_embedding_size)\n",
+    "    \n",
+    "    \n",
+    "    # Prepare the target sequences we'll feed to the decoder in training mode\n",
+    "    dec_input = process_decoder_input(target_data, target_vocab_to_int, batch_size)\n",
+    "        \n",
+    "    # Pass encoder state and decoder inputs to the decoders\n",
+    "    training_decoder_output, inference_decoder_output = decoding_layer(dec_input,\n",
+    "                                                                       enc_state,\n",
+    "                                                                       target_sequence_length,\n",
+    "                                                                       max_target_sentence_length,\n",
+    "                                                                       rnn_size,\n",
+    "                                                                       num_layers, \n",
+    "                                                                       target_vocab_to_int, \n",
+    "                                                                       target_vocab_size,\n",
+    "                                                                       batch_size,\n",
+    "                                                                       keep_prob,\n",
+    "                                                                       dec_embedding_size) \n",
+    "    \n",
+    "    return training_decoder_output, inference_decoder_output\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -778,21 +810,21 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = None\n",
+    "epochs = 60\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 128\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 50\n",
     "# Number of Layers\n",
-    "num_layers = None\n",
+    "num_layers = 3\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = None\n",
-    "decoding_embedding_size = None\n",
+    "encoding_embedding_size = 20\n",
+    "decoding_embedding_size = 20\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.001\n",
     "# Dropout Keep Probability\n",
-    "keep_probability = None\n",
-    "display_step = None"
+    "keep_probability = 0.5\n",
+    "display_step = 20"
    ]
   },
   {
